padding fix because when a srollbar appears it shifts the entire page to the left

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,3 +6,7 @@ body {
   background: black;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+html {
+  overflow-y: scroll;
+}
